--- a/src/_todo.scss
+++ b/src/_todo.scss
@@ -1,14 +1,3 @@
-
-  // dark mode 
-  /* .dark-mode {
-  filter: invert(100%);
-  img {
-    filter: invert(100%);
-  }
-  .landing-page {
-    filter: invert(100%);
-  }
-  } */
   //dark mode
   .todo-container {
     width: 600px;
